--- a/css/main.css
+++ b/css/main.css
@@ -36,12 +36,12 @@
 /* Global Styles */
 html,
 body {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
 }
 
 body {
-  font: 1.8em/1.5 "JosefinSans-Regular", sans-serif;
+  font: 18px/1.5 "JosefinSans-Regular", sans-serif; /* 1.2em */
   overflow-x: hidden;
 }
 
@@ -119,7 +119,7 @@ ul.home-section-links > li > a {
 .text-vertical-center h1 {
   margin: 0;
   padding: 0;
-  font-size: 5.4em;
+  font-size: 6.5rem;
   font-weight: 500;
   color: rgba(255, 255, 255, 0.9);
 }
@@ -194,26 +194,35 @@ ul.home-section-links > li > a {
 
 #menu-close {
   color: #111;
+  background-color: #fff;
+  width: 50px;
+  height: 50px;
+  padding: 13px;
+  float: right;
+  border-radius: 1px;
+}
+#menu-close i {
+  font-size: 1.45rem;
 }
 
 .sidebar-nav li a:hover {
   color: #fff;
   background: rgba(255, 255, 255, 0.2);
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .sidebar-nav li a#menu-close:hover {
   color: #111;
-  background-color: #a9a255;
+  background-color: #fff;
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .sidebar-nav > .sidebar-brand {
-  font-size: 18px;
+  font-size: 1.3rem;
   line-height: 55px;
 }
 
@@ -223,8 +232,9 @@ ul.home-section-links > li > a {
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
-  color: #fff;
+  color: #999;
   background: none;
+  font-weight: unset;
 }
 
 .fa-custom {
@@ -243,10 +253,18 @@ ul.home-section-links > li > a {
 #menu-toggle {
   z-index: 1;
   position: fixed;
+  width: 50px;
+  height: 50px;
   top: 0;
   right: 0;
-  border-radius: 3px;
-  transition: background-color 0.4s 0.2s ease-in, color 0.4s 0.2s ease-in;
+  padding: 13px;
+  border-radius: 1px;
+  border: none !important;
+  /* transition: background-color 0.4s 0.2s ease-in, color 0.4s 0.2s ease-in; */
+}
+
+#menu-toggle i {
+  font-size: 1.5rem;
 }
 
 #sidebar-wrapper.active {
@@ -284,18 +302,15 @@ box-sizing {
 }
 
 #uidev {
-  margin: 1em auto 0;
   font-family: "OpenSans-CondBold", sans-serif;
   font-weight: 700;
   font-size: 100%;
-  display: table;
+  /* width: auto; */
 }
 
 .cover {
   color: #7f8c8d;
-  padding: 1% 7% 1% 10%;
-  float: left;
-  display: table-cell;
+  padding: 25px 0 0;
 }
 
 span {
@@ -304,13 +319,15 @@ span {
 
 h2.stack {
   text-transform: uppercase;
-  font-size: 6em;
+  /* font-size: 6em; */
+  font-size: 6.8rem;
   line-height: 0.7em;
   word-wrap: break-word;
   overflow-wrap: break-word;
   vertical-align: middle;
   font-family: "Open Sans Condensed", sans-serif;
   font-weight: 700;
+  margin-left: 20px;
 }
 
 /* U */
@@ -585,10 +602,10 @@ h2.stack {
 /* Main Page Animations end*/
 
 div.intro {
-  margin: 0 10px 10px;
+  padding: 0 10px 10px;
   color: #fff;
   font-weight: 500;
-  font-size: 0.98em;
+  font-size: 0.98rem;
   font-family: "JosefinSans-Light";
   display: table;
   -webkit-animation-duration: 5s;
@@ -613,7 +630,7 @@ div.intro p {
 
 div.intro a {
   position: relative;
-  color: #7f8c8d;
+  color: #fff;
   font-weight: 900;
   font-style: italic;
   transition: color 0.4s 0.2s ease-in;
@@ -644,7 +661,7 @@ div.intro i {
 
 h2.lines {
   text-align: center;
-  font-size: 0.7em;
+  font-size: 0.75rem;
   color: #a9a255;
   text-transform: uppercase;
   letter-spacing: 0.15rem;
@@ -665,7 +682,7 @@ h2.lines:after {
   font-family: "Calluna-Regular", serif;
   text-align: center;
   margin: 0 0 20px 0;
-  font-size: 1.6em;
+  font-size: 1.72rem;
 }
 
 ul#about-list {
@@ -700,9 +717,13 @@ ul#about-list li:hover:before {
 
 /* Skills */
 .skills {
-  padding: 50px 0;
+  padding: 50px 0 0;
   background-color: #111;
   color: #fff;
+}
+.skills .section-left,
+.skills .section-right {
+  margin-bottom: 50px;
 }
 
 h2.blue {
@@ -744,11 +765,11 @@ ul#tool-list li:hover:before {
 }
 
 h3.credentials {
-  margin-bottom: 2rem;
+  margin-bottom: 1.1rem;
   color: #05070c;
-  font-size: 1.8rem;
+  font-size: 1.1rem;
   text-transform: uppercase;
-  letter-spacing: 0.15rem;
+  letter-spacing: 0.1rem;
   font-weight: 700;
   position: relative;
 }
@@ -757,7 +778,7 @@ h3.credentials::before {
   content: "";
   display: block;
   height: 32px;
-  width: 7rem;
+  width: 4.3rem;
   position: absolute;
   top: 50%;
   left: -4px;
@@ -782,6 +803,7 @@ span.ml3 {
 .exp-wrap {
   position: relative;
   text-align: left;
+  margin-bottom: 5rem;
 }
 
 .exp-wrap::before {
@@ -791,29 +813,29 @@ span.ml3 {
   height: 100%;
   background-color: #ccc;
   position: absolute;
-  left: 6.5rem;
+  left: 4rem;
   top: 0;
 }
 
 .exp {
   position: relative;
-  padding-left: 8rem;
-  margin-bottom: 4.2rem;
+  padding-left: 4.8rem;
+  margin-bottom: 2.2rem;
 }
 
 .exp-icon,
 .timeline-icon {
-  height: 4.8rem;
-  width: 5.5rem;
+  height: 3.1rem;
+  width: 3.5rem;
   -webkit-transform: scale(0);
   transform: scale(0);
   overflow: hidden;
-  line-height: 4.8rem;
+  line-height: 4rem;
   text-align: center;
   color: #ffffff;
   position: absolute;
   left: 2rem;
-  top: 17px;
+  top: 12.5px;
   margin-left: -2rem;
   -webkit-transition: all 1s 0.5s cubic-bezier(0.87, -0.41, 0.19, 1.44);
 }
@@ -825,16 +847,16 @@ span.ml3 {
 }
 
 i.fa-mine:before {
-  color: #555557;
+  /* color: #555557; */
   font-size: 2.3em;
-  background: #262223;
+  background: #555;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0.7;
 }
 
 .exp-head h3 {
-  font-size: 2.4rem;
+  font-size: 1.55rem;
   line-height: 1;
   margin-bottom: 10px;
   margin-top: 0;
@@ -843,10 +865,11 @@ i.fa-mine:before {
 
 .exp .exp-head h4,
 .timeline-block .exp-head h4 {
+  font-size: 1.16rem;
+  font-weight: 600;
   margin-bottom: 10px;
   line-height: 1.25;
   color: #4f4f4f;
-  font-weight: 600;
 }
 
 .timeline-wrap {
@@ -861,18 +884,22 @@ i.fa-mine:before {
   height: 100%;
   background-color: #ccc;
   position: absolute;
-  left: 6.5rem;
+  left: 4.1rem;
   top: 0;
 }
 
 .timeline-block {
   position: relative;
-  padding-left: 8rem;
-  margin-bottom: 2.5rem;
+  padding-left: 4.85rem;
+  margin-bottom: 3rem;
+}
+
+.timeline-block.sht {
+  margin-bottom: 2.2rem;
 }
 
 .time-frame {
-  font-size: 1.4rem;
+  font-size: 0.9rem;
   color: #757575;
   margin-bottom: 0;
   line-height: 1.5;
@@ -883,7 +910,6 @@ i.fa-mine:before {
   background-color: #7c7c7c;
   color: #fff;
   font-weight: 900;
-  margin-top: 25px;
   padding: 10px 40px 5px;
   font-size: 16px;
   border-radius: 3px;
@@ -1172,8 +1198,8 @@ textarea {
 #resume:hover,
 .btn-danger-modal:hover,
 .btn-danger-modal:focus {
-  color: #111;
-  background-color: #a9a255;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .mgt25 {
@@ -1254,18 +1280,27 @@ i.send-icon {
 
 /* Footer */
 footer {
-  padding: 50px 0;
+  padding: 60px 0 30px;
 }
 
 #mailid {
+  font-size: 1.22rem;
   color: #111;
-  margin-bottom: 14px;
+  margin-bottom: 8px;
   display: block;
 }
 
+#social {
+  margin-bottom: 40px !important;
+  list-style: none;
+}
+
+#social > li {
+  display: inline-block;
+}
 #social > li > a {
   color: #a9a255;
-  transition: all 0.4s 0.1s ease-in-out;
+  transition: all 0.3s 0.1s ease-in-out;
 }
 
 #social > li > a:hover {
@@ -1278,8 +1313,9 @@ footer {
   bottom: 5px;
   right: 5px;
   padding: 10px 13px;
-  border-radius: 3px;
-  transition: background-color 0.4s 0.2s ease-in, color 0.4s 0.2s ease-in;
+  border-radius: 1px;
+  border: none !important;
+  z-index: 9999;
 }
 
 /** home page navigation **/
@@ -1301,7 +1337,7 @@ ul.home-section-links li {
 }
 
 ul.home-section-links li span {
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   letter-spacing: 2px;
   display: inline-block;
   margin-right: 3px;
@@ -1326,7 +1362,7 @@ ul.home-section-links > li:nth-child(odd) {
 
 /**** Bracket Animation ****/
 ul.home-section-links > li > a {
-  font-size: 22px;
+  font-size: 1.35rem;
   position: relative;
   display: inline-block;
   outline: none;
@@ -1484,7 +1520,7 @@ div.scroll-down {
 
 /*** Progress Bars ****/
 .progress-title {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 700;
   color: #fff;
   letter-spacing: 0.14em;
@@ -1501,6 +1537,7 @@ div.scroll-down {
 .progress .progress-bar {
   box-shadow: none;
   position: relative;
+  overflow: unset;
   -webkit-animation: animate-positive 2s;
   animation: animate-positive 2s;
 }
@@ -1628,6 +1665,31 @@ div.scroll-down {
   ul#about-list li:before,
   ul#tool-list li:before {
     margin-top: 10px;
+  }
+
+  .timeline-block {
+    margin-bottom: 2.2rem;
+  }
+
+  #menu-toggle,
+  #menu-close {
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+  }
+  #menu-toggle i,
+  #menu-close i {
+    font-size: 1.25rem;
+  }
+
+  .skills .section-left {
+    margin-bottom: 80px;
+  }
+  .skills .section-right {
+    margin-bottom: 50px;
+  }
+  .skills .subtitle {
+    margin: 0 0 20px 0 !important;
   }
 }
 
