--- a/css/main.css
+++ b/css/main.css
@@ -195,14 +195,14 @@ ul.home-section-links > li > a {
 #menu-close {
   color: #111;
   background-color: #fff;
-  width: 50px;
-  height: 50px;
-  padding: 13px;
+  width: 2.8rem;
+  height: 2.8rem;
+  padding: 0.4rem 0.85rem;
   float: right;
   border-radius: 1px;
 }
-#menu-close i {
-  font-size: 1.45rem;
+#menu-close img {
+  width: 100%;
 }
 
 .sidebar-nav li a:hover {
@@ -253,18 +253,18 @@ ul.home-section-links > li > a {
 #menu-toggle {
   z-index: 1;
   position: fixed;
-  width: 50px;
-  height: 50px;
+  width: 2.8rem;
+  height: 2.8rem;
   top: 0;
   right: 0;
-  padding: 13px;
+  padding: 0.44rem 0.42rem;
   border-radius: 1px;
   border: none !important;
   /* transition: background-color 0.4s 0.2s ease-in, color 0.4s 0.2s ease-in; */
 }
 
-#menu-toggle i {
-  font-size: 1.5rem;
+#menu-toggle img {
+  width: 100%;
 }
 
 #sidebar-wrapper.active {
@@ -614,6 +614,7 @@ div.intro {
 
 div.intro p {
   display: table-cell;
+  opacity: 0.8;
 }
 
 @media only screen and (max-width: 350px) {
@@ -631,24 +632,9 @@ div.intro p {
 div.intro a {
   position: relative;
   color: #fff;
-  font-weight: 900;
-  font-style: italic;
-  transition: color 0.4s 0.2s ease-in;
-}
-
-div.intro a:hover,
-div.intro i:hover {
-  color: #a9a255;
-}
-
-div.intro i {
-  position: absolute;
-  top: -3px;
-  transition: all 1s 0.4s ease-in-out;
-}
-
-.rotateRocket {
-  -webkit-transform: rotate(136deg);
+  font-weight: 700;
+  /* font-style: italic; */
+  text-decoration: underline;
 }
 
 /* About */
@@ -1310,12 +1296,17 @@ footer {
 #to-top {
   display: none;
   position: fixed;
+  width: 2.5rem;
+  height: 2.5rem;
   bottom: 5px;
   right: 5px;
-  padding: 10px 13px;
+  padding: 0.3rem 0.5rem;
   border-radius: 1px;
   border: none !important;
   z-index: 9999;
+}
+#to-top img {
+  width: 100%;
 }
 
 /** home page navigation **/
@@ -1608,18 +1599,27 @@ div.scroll-down {
   }
 
   #to-top {
-    padding: 5px 8px;
     bottom: 10px;
     right: 10px;
   }
 
-  .mgb50 {
+  .about p {
     margin-bottom: 50px;
+    line-height: 1.52;
   }
 
   ul#about-list li,
   ul#tool-list li {
-    line-height: 1.8;
+    margin-bottom: 0.85rem;
+  }
+  ul#about-list li:last-child,
+  ul#tool-list li:last-child {
+    margin-bottom: 0;
+  }
+
+  ul#about-list li,
+  ul#tool-list li {
+    line-height: 1.52;
   }
 
   ul#tool-list {
@@ -1669,17 +1669,6 @@ div.scroll-down {
 
   .timeline-block {
     margin-bottom: 2.2rem;
-  }
-
-  #menu-toggle,
-  #menu-close {
-    width: 40px;
-    height: 40px;
-    padding: 8px;
-  }
-  #menu-toggle i,
-  #menu-close i {
-    font-size: 1.25rem;
   }
 
   .skills .section-left {
