--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,7 @@ ul.home-section-links > li > a {
   background-color: #fff;
   width: 2.8rem;
   height: 2.8rem;
-  padding: 0.4rem 0.85rem;
+  padding: 0.33rem 0.85rem;
   float: right;
   border-radius: 1px;
 }
@@ -216,11 +216,6 @@ ul.home-section-links > li > a {
   background-color: #fff;
 }
 
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-  /* font-weight: 600; */
-}
-
 .sidebar-nav > .sidebar-brand {
   font-size: 1.3rem;
   line-height: 55px;
@@ -235,19 +230,6 @@ ul.home-section-links > li > a {
   color: #999;
   background: none;
   font-weight: unset;
-}
-
-.fa-custom {
-  display: inline;
-  margin-right: 15px;
-}
-
-.mgr20 {
-  margin-right: 20px;
-}
-
-.mgr12 {
-  margin-right: 12px;
 }
 
 #menu-toggle {
@@ -614,7 +596,7 @@ div.intro {
 
 div.intro p {
   display: table-cell;
-  opacity: 0.8;
+  opacity: 0.95;
 }
 
 @media only screen and (max-width: 350px) {
@@ -903,7 +885,7 @@ i.fa-mine:before {
 }
 
 a#resume i {
-  margin-left: 12px;
+  margin-left: -3px 0 0 12px;
   vertical-align: top;
   font-size: 25px;
 }
@@ -917,193 +899,6 @@ a#resume i {
 
 /** Portfolio items styles **/
 
-.view .mask,
-.view .content {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-}
-
-.view img {
-  display: block;
-  position: relative;
-  width: 100%;
-}
-
-.view h4 {
-  color: #7e8ebb;
-  text-align: center;
-  position: relative;
-  font-size: 18px;
-  font-weight: 700;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.8);
-  margin: 20px 0 0 0;
-}
-
-.view p {
-  font-family: Georgia, serif;
-  font-style: italic;
-  font-size: 14px;
-  position: relative;
-  color: #fff;
-  padding: 10px 20px 20px;
-  text-align: center;
-}
-
-.view a.info {
-  display: inline-block;
-  padding: 7px 20px 5px;
-  background: rgba(255, 255, 255, 0.7);
-  color: #111;
-  font-family: sans-serif;
-  font-size: 13px;
-  font-weight: 500;
-  border-radius: 3px;
-  position: relative;
-}
-
-.view a.info i {
-  position: absolute;
-  top: 3px;
-  right: 2px;
-}
-
-.view a.info:hover {
-  -webkit-box-shadow: 0 0 5px #000;
-  -moz-box-shadow: 0 0 5px #000;
-  box-shadow: 0 0 5px #000;
-}
-
-.view-third img {
-  -webkit-transition: all 0.2s ease-in;
-  -moz-transition: all 0.2s ease-in;
-  -o-transition: all 0.2s ease-in;
-  -ms-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
-.view-third .mask {
-  background-color: rgba(0, 0, 0, 0.6);
-  -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
-  opacity: 0;
-  -webkit-transform: translate(460px, -100px) rotate(180deg);
-  -moz-transform: translate(460px, -100px) rotate(180deg);
-  -o-transform: translate(460px, -100px) rotate(180deg);
-  -ms-transform: translate(460px, -100px) rotate(180deg);
-  transform: translate(460px, -100px) rotate(180deg);
-  -webkit-transition: all 0.8s 0.2s ease-in-out;
-  -moz-transition: all 0.8s 0.2s ease-in-out;
-  -o-transition: all 0.8s 0.2s ease-in-out;
-  -ms-transition: all 0.8s 0.2s ease-in-out;
-  transition: all 0.8s 0.2s ease-in-out;
-}
-
-.view-third h4 {
-  -webkit-transform: translateY(-100px);
-  -moz-transform: translateY(-100px);
-  -o-transform: translateY(-100px);
-  -ms-transform: translateY(-100px);
-  transform: translateY(-100px);
-  -webkit-transition: all 0.8s ease-in-out;
-  -moz-transition: all 0.8s ease-in-out;
-  -o-transition: all 0.8s ease-in-out;
-  -ms-transition: all 0.8s ease-in-out;
-  transition: all 0.8s ease-in-out;
-}
-
-.view-third p {
-  -webkit-transform: translateX(300px) rotate(90deg);
-  -moz-transform: translateX(300px) rotate(90deg);
-  -o-transform: translateX(300px) rotate(90deg);
-  -ms-transform: translateX(300px) rotate(90deg);
-  transform: translateX(300px) rotate(90deg);
-  -webkit-transition: all 0.7s ease-in-out;
-  -moz-transition: all 0.7s ease-in-out;
-  -o-transition: all 0.7s ease-in-out;
-  -ms-transition: all 0.7s ease-in-out;
-  transition: all 0.7s ease-in-out;
-}
-
-.view-third a.info {
-  -webkit-transform: translateY(-200px);
-  -moz-transform: translateY(-200px);
-  -o-transform: translateY(-200px);
-  -ms-transform: translateY(-200px);
-  transform: translateY(-200px);
-  -webkit-transition: all 1s ease-in-out;
-  -moz-transition: all 1s ease-in-out;
-  -o-transition: all 1s ease-in-out;
-  -ms-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
-}
-
-.view-third:hover .mask,
-.view-third:active .mask,
-.view-third:focus .mask {
-  -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: alpha(opacity=100);
-  opacity: 1;
-  -webkit-transition-delay: 0s;
-  -moz-transition-delay: 0s;
-  -o-transition-delay: 0s;
-  -ms-transition-delay: 0s;
-  transition-delay: 0s;
-  -webkit-transform: translate(0px, 0px);
-  -moz-transform: translate(0px, 0px);
-  -o-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate(0px, 0px);
-}
-
-.view-third:hover h4,
-.view-third:active h4,
-.view-third:focus h4 {
-  -webkit-transform: translateY(0px);
-  -moz-transform: translateY(0px);
-  -o-transform: translateY(0px);
-  -ms-transform: translateY(0px);
-  transform: translateY(0px);
-  -webkit-transition-delay: 0.5s;
-  -moz-transition-delay: 0.5s;
-  -o-transition-delay: 0.5s;
-  -ms-transition-delay: 0.5s;
-  transition-delay: 0.5s;
-}
-
-.view-third:hover p,
-.view-third:active p,
-.view-third:focus p {
-  -webkit-transform: translateX(0px) rotate(0deg);
-  -moz-transform: translateX(0px) rotate(0deg);
-  -o-transform: translateX(0px) rotate(0deg);
-  -ms-transform: translateX(0px) rotate(0deg);
-  transform: translateX(0px) rotate(0deg);
-  -webkit-transition-delay: 0.4s;
-  -moz-transition-delay: 0.4s;
-  -o-transition-delay: 0.4s;
-  -ms-transition-delay: 0.4s;
-  transition-delay: 0.4s;
-}
-
-.view-third:hover a.info,
-.view-third:active a.info,
-.view-third:focus a.info {
-  -webkit-transform: translateY(0px);
-  -moz-transform: translateY(0px);
-  -o-transform: translateY(0px);
-  -ms-transform: translateY(0px);
-  transform: translateY(0px);
-  -webkit-transition-delay: 0.3s;
-  -moz-transition-delay: 0.3s;
-  -o-transition-delay: 0.3s;
-  -ms-transition-delay: 0.3s;
-  transition-delay: 0.3s;
-}
 /******************** end ****************/
 
 /* flipInX  portfolio*/
@@ -1181,20 +976,13 @@ textarea {
 .btn:focus,
 .btn:hover,
 #btn-hire:hover,
-#resume:hover,
-.btn-danger-modal:hover,
-.btn-danger-modal:focus {
+#resume:hover {
   color: #fff;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .mgt25 {
   margin-top: 25px;
-}
-
-#btn-hire {
-  padding: 12px 16px;
-  cursor: default;
 }
 
 /** Button Animation **/
@@ -1255,10 +1043,6 @@ i.send-icon {
     height: 75%;
   }
 }
-
-/*.map iframe {
-    pointer-events: none;
-}*/
 
 .scrolloff {
   pointer-events: none;
@@ -1742,96 +1526,6 @@ div.scroll-down {
   color: #111;
 }
 
-/* Modal Styles */
-.modal-title {
-  font-weight: 700;
-  text-align: center;
-}
-
-.modal-body {
-  padding: 0 15px 15px;
-}
-
-.modal-body p {
-  font-size: 15px;
-  margin: 0 0 15px;
-  text-align: center;
-}
-
 a.no-border {
   border: none !important;
-}
-
-.modal .modal-header {
-  border-bottom: none;
-  position: relative;
-  padding: 15px 15px 5px;
-}
-
-.modal .modal-header .btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-top: 0;
-  border-top-left-radius: 0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 6px;
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.help-block-modal {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.form-control-modal {
-  background-color: #fff;
-  border: 1px solid rgba(1, 1, 1, 0.6);
-  color: #000;
-}
-
-.btn-custom-modal,
-.btn-danger-modal {
-  width: 75px;
-  height: 40px;
-  padding: 0;
-  font-size: 14px;
-}
-
-.btn-custom-modal i {
-  font-size: 13px;
-  margin-left: -5px;
-  margin-right: 2px;
-}
-
-.btn-danger-modal {
-  padding: 8px 11px 9px 5px;
-  border: none;
-  font-weight: 600;
-  transition: background-color 0.4s 0.1s ease-in, color 0.4s 0.1s ease-in;
-}
-
-@media only screen and (max-width: 768px) {
-  .btn-custom-modal {
-    padding: 3px 0 0 0;
-  }
-
-  .btn-danger-modal {
-    padding: 12px 11px 9px 5px;
-  }
-
-  .glyph-modal {
-    top: 3px;
-  }
-}
-
-@media only screen and (max-width: 350px) {
-  .modal-title,
-  .modal-body p {
-    text-align: left;
-  }
-
-  .text-vertical-center h1 {
-    font-size: 2em;
-  }
 }
