--- a/css/main.css
+++ b/css/main.css
@@ -1596,6 +1596,7 @@ div.scroll-down {
     display: block;
     text-align: left;
     margin-right: 0;
+    margin-bottom: 1rem;
   }
   .menu-icon {
     left: 15px;
