--- a/css/main.css
+++ b/css/main.css
@@ -264,6 +264,9 @@ body.full_nav-active .full_nav__list-item:nth-child(3) {
 body.full_nav-active .full_nav__list-item:nth-child(4) {
   transition-delay: 0.9s;
 }
+body.full_nav-active .full_nav__list-item:nth-child(5) {
+  transition-delay: 0.9s;
+}
 
 /* Header */
 .hero {
