--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,7 @@ body.full_nav-active .full_nav__list-item:nth-child(5) {
   position: relative;
   width: 100%;
   height: 100%;
-  background: url(../images/hero.jpg) no-repeat center center scroll;
+  background: url(../images/image.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -764,13 +764,13 @@ span.ml3 {
 }
 
 .exp-head h3 a {
-  color: #7e8ebb;
+  color: #000;
   transition: color 0.4s 0.1s ease-in-out;
 }
 
 .exp-head h3 a:hover,
 .exp-head h3 a:focus {
-  color: #a9a255;
+  /* color: #a9a255; */
 }
 
 .exp-wrap {
@@ -820,9 +820,8 @@ span.ml3 {
 }
 
 i.fa-mine:before {
-  /* color: #555557; */
   font-size: 2.3em;
-  background: #555;
+  background: #252324;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0.7;
@@ -833,16 +832,16 @@ i.fa-mine:before {
   line-height: 1;
   margin-bottom: 10px;
   margin-top: 0;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .exp .exp-head h4,
 .timeline-block .exp-head h4 {
   font-size: 1.16rem;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 10px;
   line-height: 1.25;
-  color: #4f4f4f;
+  color: #111;
 }
 
 .timeline-wrap {
@@ -873,7 +872,7 @@ i.fa-mine:before {
 
 .time-frame {
   font-size: 0.9rem;
-  color: #757575;
+  color: #a9a255;
   margin-bottom: 0;
   line-height: 1.5;
   font-style: italic;
