--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,7 @@ body.full_nav-active .full_nav__list-item:nth-child(5) {
   position: relative;
   width: 100%;
   height: 100%;
-  background: url(../images/image.jpg) no-repeat center center scroll;
+  background: url(../images/bg-img.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -757,6 +757,10 @@ h3.credentials::before {
   left: -4px;
   margin-top: -2px;
   border-bottom: 1px solid #ccc;
+}
+
+.history h3.subtitle {
+  margin-bottom: 2.2rem;
 }
 
 span.ml3 {
