--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ ul.home-section-links > li > a {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
-/* Full-page Menu */
+/* Full page nav  */
 .menu-icon-wrap {
   background-color: rgb(0 0 0 / 20%);
   width: 45px;
@@ -141,7 +141,7 @@ ul.home-section-links > li > a {
 }
 .menu-icon {
   height: 30px;
-  width: 30px;
+  width: 30px px;
   position: fixed;
   z-index: 2;
   left: 58px;
@@ -164,12 +164,12 @@ ul.home-section-links > li > a {
   float: right;
 }
 
-.full_nav {
+.nav {
   position: fixed;
-  z-index: -1;
+  z-index: 1;
 }
-.full_nav:before,
-.full_nav:after {
+.nav:before,
+.nav:after {
   content: "";
   position: fixed;
   width: 100vw;
@@ -179,14 +179,14 @@ ul.home-section-links > li > a {
   transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
   transform: translateX(0%) translateY(-100%);
 }
-.full_nav:after {
-  background: #fff;
+.nav:after {
+  background: white;
   transition-delay: 0s;
 }
-.full_nav:before {
+.nav:before {
   transition-delay: 0.1s;
 }
-.full_nav__content {
+.nav__content {
   position: fixed;
   top: 50%;
   transform: translate(0%, -50%);
@@ -195,8 +195,9 @@ ul.home-section-links > li > a {
   font-size: 3rem;
   font-weight: 200;
   cursor: pointer;
+  visibility: hidden;
 }
-.full_nav__list-item {
+.nav__list-item {
   position: relative;
   display: inline-block;
   transition-delay: 0.8s;
@@ -205,7 +206,7 @@ ul.home-section-links > li > a {
   transition: opacity 0.2s ease, transform 0.3s ease;
   margin-right: 2rem;
 }
-.full_nav__list-item:before {
+.nav__list-item:before {
   content: "";
   position: absolute;
   background: #000000;
@@ -216,56 +217,58 @@ ul.home-section-links > li > a {
   transition: all 0.3s ease;
   z-index: -1;
 }
-.full_nav__list-item:hover:before {
+.nav__list-item:hover:before {
   width: 100%;
 }
 
-body.full_nav-active .menu-icon__line {
+body.nav-active .nav__content {
+  visibility: visible;
+}
+body.nav-active .menu-icon__line {
   background-color: #000;
   transform: translateX(0px) rotate(-45deg);
 }
-body.full_nav-active .menu-icon__line-left {
+body.nav-active .menu-icon__line-left {
   transform: translateX(1px) rotate(45deg);
 }
-body.full_nav-active .menu-icon__line-right {
+body.nav-active .menu-icon__line-right {
   transform: translateX(-2px) rotate(45deg);
 }
-body.full_nav-active .full_nav {
+body.nav-active .nav {
   visibility: visible;
-  z-index: 1;
 }
-body.full_nav-active .full_nav:before,
-body.full_nav-active .full_nav:after {
+body.nav-active .nav:before,
+body.nav-active .nav:after {
   transform: translateX(0%) translateY(0%);
 }
-body.full_nav-active .full_nav:after {
+body.nav-active .nav:after {
   transition-delay: 0.1s;
 }
-body.full_nav-active .full_nav:before {
+body.nav-active .nav:before {
   transition-delay: 0s;
 }
-body.full_nav-active .full_nav__list-item {
+body.nav-active .nav__list-item {
   opacity: 1;
   transform: translateX(0%);
   transition: opacity 0.3s ease, transform 0.3s ease, color 0.3s ease;
 }
-body.full_nav-active .full_nav__list-item:nth-child(0) {
+body.nav-active .nav__list-item:nth-child(0) {
   transition-delay: 0.5s;
 }
-body.full_nav-active .full_nav__list-item:nth-child(1) {
+body.nav-active .nav__list-item:nth-child(1) {
   transition-delay: 0.6s;
 }
-body.full_nav-active .full_nav__list-item:nth-child(2) {
+body.nav-active .nav__list-item:nth-child(2) {
   transition-delay: 0.7s;
 }
-body.full_nav-active .full_nav__list-item:nth-child(3) {
+body.nav-active .nav__list-item:nth-child(3) {
   transition-delay: 0.8s;
 }
-body.full_nav-active .full_nav__list-item:nth-child(4) {
+body.nav-active .nav__list-item:nth-child(4) {
   transition-delay: 0.9s;
 }
-body.full_nav-active .full_nav__list-item:nth-child(5) {
-  transition-delay: 0.9s;
+body.nav-active .nav__list-item:nth-child(5) {
+  transition-delay: 1s;
 }
 
 /* Header */
@@ -1593,11 +1596,11 @@ div.scroll-down {
     right: -4.5rem;
   }
 
-  .full_nav__content {
+  .nav__content {
     left: 35vw;
     width: 6rem;
   }
-  .full_nav__list-item {
+  .nav__list-item {
     font-size: 2rem;
     display: block;
     text-align: left;
