Full-page menu tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -140,13 +140,14 @@ ul.home-section-links > li > a {
   top: 30px;
 }
 .menu-icon {
-  height: 30px;
-  width: 30px;
+  height: 45px;
+  width: 45px;
   position: fixed;
   z-index: 2;
-  left: 58px;
-  top: 46px;
+  left: 50px;
+  top: 30px;
   cursor: pointer;
+  padding: 15px 8px 0;
 }
 .menu-icon__line {
   height: 2px;
@@ -226,10 +227,10 @@ body.nav-active .nav__content {
 }
 body.nav-active .menu-icon__line {
   background-color: #000;
-  transform: translateX(0px) rotate(-45deg);
+  transform: translateX(-1px) rotate(-45deg);
 }
 body.nav-active .menu-icon__line-left {
-  transform: translateX(1px) rotate(45deg);
+  transform: translateX(0) rotate(45deg);
 }
 body.nav-active .menu-icon__line-right {
   transform: translateX(-2px) rotate(45deg);
